--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -4,6 +4,7 @@
 
 h6 {
     font-size: 12px;
+    color: white;
 }
 
 .profileimg {
@@ -14,4 +15,5 @@ h6 {
 
 .header {
     height: 7%;
+    background-color: #1434A4;
 }
