--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="header" color="primary">
+<mat-toolbar class="header">
     <div class="spacer"></div>
     <h6>Hi, Admin</h6>
     &nbsp;
